--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
         "128": "img/icon_128.png" 
     },
     "permissions": [
-	  "https://api.instagram.com/oauth/authorize"
+	  "https://api.instagram.com/oauth/authorize",
+	  "geolocation"
 	],
     "browser_action":
     {
