--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Instagram™ viewer for Google Chrome™",
-    "version": "1.4",
+    "name": "InstaBrowser",
+    "version": "1.5",
     "description": "view your Instagram™ photos in Google Chrome™",
     "icons": 
     {
