--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "InstaBrowser",
-    "version": "1.5",
-    "description": "view your Instagram™ photos in Google Chrome™",
+    "version": "1.6",
+    "description": "Instagram™ viewer for Google Chrome™",
     "icons": 
     {
         "16": "img/icon_16.png",
