--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
     "name": "InstaBrowser",
     "version": "1.6.3",
-    "description": "Instagram™ viewer for Google Chrome™",
+    "description": "__MSG_extDescription__",
+	"default_locale": "en",
     "icons": 
     {
         "16": "img/icon_16.png",
         "48": "img/icon_48.png",
+		"96": "img/icon_96.png",
         "128": "img/icon_128.png" 
     },
     "permissions": [
