Option Page Translation english

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
         "default_icon": "img/icon_19.png",
         "default_popup": "popup.html"
     },
+	"options_page": "options.html",
 	"content_scripts": [
 	  {
 	    "matches": ["http://instagram.com/robots.txt*"],
